updated config files for azure sub & contrast acct

--- a/contrast_security.yaml
+++ b/contrast_security.yaml
@@ -1,5 +1,5 @@
 api: 
-  url: <CONTRAST TEAM SERVER URL>
-  api_key: <API KEY>
-  service_key: <SERVICE KEY>
-  user_name: <CONTRAST TEAM SERVER USERNAME>
+  url: https://ce.contrastsecurity.com/Contrast
+  api_key: 53uL1ae5nM34Tpb5mnFD9Gq5YavgUUMH
+  service_key: REMEFUY3J7BTRSOK
+  user_name: agent_73a97723-2371-47c5-88ce-fd1dce0f0e3c@BenjaminmoracagmailcomOrg
