--- a/kubernetes/manifests/web-deployment.yaml
+++ b/kubernetes/manifests/web-deployment.yaml
@@ -28,7 +28,7 @@ spec:
         - env:
             - name: ConnectionStrings__DotNetFlicksConnection
               value: Server=tcp:database,1433;Initial Catalog=DotNetFlicksDb;Persist Security Info=False;User ID=sa;Password=reallyStrongPwd123;MultipleActiveResultSets=False;
-          image: <REGISTRY NAME>.azurecr.io/netflicks-dotnet
+          image: kramericaindustries.azurecr.io/netflicks:latest
           name: web
           ports:
             - containerPort: 80
